[gd_scene load_steps=30 format=3 uid="uid://du2nkbrxyw642"]

[ext_resource type="Script" path="res://scripts/weaponBehavior.gd" id="1_gijjp"]
[ext_resource type="Texture2D" uid="uid://dtp8ovwjbmvxf" path="res://assets/espada new.png" id="2_0rjf5"]
[ext_resource type="Texture2D" uid="uid://dh2j0vw1ogwgf" path="res://assets/ataque espada.png" id="3_sxpv6"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_3gwx7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_aidmd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_ssq3d"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_132pl"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="8_3i1bj"]
[ext_resource type="Script" path="res://scripts/sword_state_machine.gd" id="9_dgymn"]

[sub_resource type="Animation" id="Animation_m281q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordStateMachine:can_input_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3lcfy"]
resource_name = "combo 1"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["combo 1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SwordStateMachine:can_input_attack")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bn3df"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["combo 2"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_abvij"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_srk60"]
_data = {
"RESET": SubResource("Animation_m281q"),
"combo 1": SubResource("Animation_3lcfy"),
"combo 2": SubResource("Animation_bn3df"),
"idle": SubResource("Animation_abvij")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jx1g7"]
atlas = ExtResource("3_sxpv6")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt6wr"]
atlas = ExtResource("3_sxpv6")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e26ce"]
atlas = ExtResource("3_sxpv6")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqwtw"]
atlas = ExtResource("3_sxpv6")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_allfx"]
atlas = ExtResource("3_sxpv6")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vtmb"]
atlas = ExtResource("3_sxpv6")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pnt3"]
atlas = ExtResource("3_sxpv6")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1d4q"]
atlas = ExtResource("3_sxpv6")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc4iw"]
atlas = ExtResource("3_sxpv6")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xfrx"]
atlas = ExtResource("3_sxpv6")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q8e4"]
atlas = ExtResource("3_sxpv6")
region = Rect2(800, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_44dtd"]
atlas = ExtResource("3_sxpv6")
region = Rect2(880, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l33vx"]
atlas = ExtResource("3_sxpv6")
region = Rect2(960, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kye1"]
atlas = ExtResource("3_sxpv6")
region = Rect2(1040, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qs03q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx1g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt6wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e26ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqwtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_allfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vtmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pnt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1d4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc4iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xfrx")
}],
"loop": false,
"name": &"combo 1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q8e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44dtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l33vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kye1")
}],
"loop": false,
"name": &"combo 2",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"new_animation",
"speed": 5.0
}]

[node name="Sword" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_gijjp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_srk60")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0rjf5")
offset = Vector2(0.5, 10)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_3gwx7")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("5_aidmd")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("6_ssq3d")

[node name="To Attack" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("7_132pl")
to = NodePath("../../Attack")
event = &"attack_pressed"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_aidmd")
initial_state = NodePath("Combo 1")

[node name="Combo 1" type="Node" parent="StateChart/CompoundState/Attack"]
script = ExtResource("6_ssq3d")

[node name="To Idle" type="Node" parent="StateChart/CompoundState/Attack/Combo 1"]
script = ExtResource("7_132pl")
to = NodePath("../../../Idle")
event = &"combo_finished"
delay_in_seconds = "0.0"

[node name="To Combo 2" type="Node" parent="StateChart/CompoundState/Attack/Combo 1"]
script = ExtResource("7_132pl")
to = NodePath("../../Combo 2")
event = &"attack_pressed_combo1"
delay_in_seconds = "0.0"

[node name="Combo 2" type="Node" parent="StateChart/CompoundState/Attack"]
script = ExtResource("6_ssq3d")

[node name="To Idle" type="Node" parent="StateChart/CompoundState/Attack/Combo 2"]
script = ExtResource("7_132pl")
to = NodePath("../../../Idle")
event = &"combo_finished"
delay_in_seconds = "0.0"

[node name="StateChartDebugger" parent="." instance=ExtResource("8_3i1bj")]
offset_left = -141.0
offset_top = -13.0
offset_right = 190.0
offset_bottom = 194.0
scale = Vector2(0.4, 0.4)
initial_node_to_watch = NodePath("../StateChart")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_qs03q")
animation = &"combo 1"
offset = Vector2(0.5, 10)

[node name="SwordStateMachine" type="Node" parent="."]
script = ExtResource("9_dgymn")

[connection signal="animation_finished" from="AnimationPlayer" to="SwordStateMachine" method="_on_animation_player_animation_finished"]
[connection signal="state_entered" from="StateChart/CompoundState/Idle" to="SwordStateMachine" method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/Attack/Combo 1" to="SwordStateMachine" method="_on_combo_1_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attack/Combo 1" to="SwordStateMachine" method="_on_combo_1_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attack/Combo 2" to="SwordStateMachine" method="_on_combo_2_state_physics_processing"]
